# newcode-memory

./: pyproject.toml
newcode_memory/: __init__.py  cli.py  mcp_server.py
newcode_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
newcode_memory/hooks/: auto-ingest.py  auto-ingest.sh  capture-prompt.py  capture-prompt.sh
